--- a/index.html
+++ b/index.html
@@ -8,11 +8,67 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="top"></div>
     <header>
-            <img src="LOGO.png" alt="" srcset="">
+        <img src="LOGO.png" alt="" srcset="">
+        <nav>
+            <ul>
+                <a href="#top">
+                    <li>about</li>
+                </a>
+                <a href="#news">
+                    <li>news</li>
+                </a>
+                <li>products</li>
+                <li>reserve</li>
+            </ul>
+        </nav>
     </header>
-    <footer>
+    <div class="content">
+        <div id="about">
+            <p class="about-title">OUR STORY</p>
+            <p class="desc" id="desc">
+                It starts with 2 passionate people who are interested in motorcycle.
+                <br>We start the business since May, 2021.</p>
+        </div>
+        <div id="news">
+            <p class="news-title">NEWS</p>
+            <div class="image-slider">
+                <div class="image">
+                    <img class="rightimage" src="assets/3.jpg">
+                </div>
+                <div class="image">
+                    <img class="centerimage" src="assets/2.jpg">
+                </div>
+                <div class="image">
+                    <img class="leftimage" src="assets/1.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <footer>
+        <img src="/assets/bike_S.png" alt="">
+        <p id="title">Y-BIKE</p>
+        <div class="contact-us">
+            <div>
+                contact us
+            </div>
+            <div class="icon">
+                <a href="">
+                    <img src="assets/pinterest.png" alt="">
+                </a>
+                <a href="">
+                    <img src="assets/instagram.png" alt="">
+                </a>
+                <a href="">
+                    <img src="assets/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="assets/facebook.png" alt="">
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
