added products, gallery, reserve

--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Y-Bike</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="products.css">
 </head>
 <body>
     <div id="top">
@@ -34,27 +34,50 @@
         </nav>
     </header>
     <div class="content">
-        <div id="about">
-            <p class="about-title">OUR STORY</p>
-            <p class="desc" id="desc">
-                It starts with 2 passionate people who are interested in motorcycle.
-                <br>We start the business since May, 2021.</p>
-        </div>
+      <div id="vixian">
+        <h1>Vixian</h1>
 
-        <div id="news">
-            <p class="news-title">NEWS</p>
-            <div class="image-slider">
-                <div class="image">
-                    <img class="rightimage" src="assets/3.jpg">
-                </div>
-                <div class="image">
-                    <img class="centerimage" src="assets/2.jpg">
-                </div>
-                <div class="image">
-                    <img class="leftimage" src="assets/1.jpg" alt="">
-                </div>
+        <div class="product-container">
+            <div class="product">
+                <img src="./assets/2.jpg" alt="">
+                <h3>Type +</h3>
+                <h3><b>Rp.90,000,000</b></h3>
+                <p>Vixian ini sangatlah mantap karena type+</p>    
+            </div>
+            <div class="product">
+                <img src="./assets/4.jpg" alt="">
+                <h3>SF</h3>
+                <h3><b>Rp.120,000,000</b></h3>
+                <p>SF adalah singkatan dari Super Fast. Tipe vixian ini sangat dianjurkan bagi kalian yang memiliki kecepatan sebagai prioritas</p>    
+            </div>
+            <div class="product">
+                <img src="./assets/5.jpg" alt="">
+                <h3>Mini</h3>
+                <h3><b>Rp.50,000,000</b></h3>
+                <p>Vixian sangat cocok untuk anda yang ingin tetap melaju ditengah keramainan jalanan di jakarta</p>    
             </div>
         </div>
+
+      </div>
+      <div id="kawasako">
+        <h1>Kawasako</h1>
+        <div class="product-container">
+            <div class="product">
+                <img src="./assets/1.jpg" alt="">
+                <h3>TKL</h3>
+                <h3><b>Rp.120,000,000</b></h3>
+                <p>TKL adalah singkatan dari Tembuk KiLat. Tipe ini cocok untuk anda yang menginginkan kecepatan yang tembus kilat.</p>
+    
+            </div>
+            <div class="product">
+                <img src="./assets/3.jpg" alt="">
+                <h3>Type Nano</h3>
+                <h3><b>Rp.80,000,000</b></h3>
+                <p>Vixian Unik yang memiliki kecepatan nano.</p>    
+            </div>
+        </div>
+
+      </div>
     </div>
     <div>
 
