--- a/gallery.html
+++ b/gallery.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Y-Bike</title>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="gallery.css">
 </head>
 <body>
-    <div id="top">
 
-    </div>
     <header>
         <img src="LOGO.png" alt="" srcset="">
         <nav>
@@ -33,27 +32,13 @@
             </ul>
         </nav>
     </header>
-    <div class="content">
-        <div id="about">
-            <p class="about-title">OUR STORY</p>
-            <p class="desc" id="desc">
-                It starts with 2 passionate people who are interested in motorcycle.
-                <br>We start the business since May, 2021.</p>
-        </div>
-
-        <div id="news">
-            <p class="news-title">NEWS</p>
-            <div class="image-slider">
-                <div class="image">
-                    <img class="rightimage" src="assets/3.jpg">
-                </div>
-                <div class="image">
-                    <img class="centerimage" src="assets/2.jpg">
-                </div>
-                <div class="image">
-                    <img class="leftimage" src="assets/1.jpg" alt="">
-                </div>
-            </div>
+    <div class="content-div">
+        <div class="gallery-div">
+            <img src="./assets/1.jpg" alt="">
+            <img src="./assets/2.jpg" alt="">
+            <img src="./assets/3.jpg" alt="">
+            <img src="./assets/4.jpg" alt="">
+            <img src="./assets/5.jpg" alt="">
         </div>
     </div>
     <div>
