--- a/reserve.html
+++ b/reserve.html
@@ -44,10 +44,18 @@
                 <div class="product-form sub-form">
                     <div class="productdata-div">
                         <div class="input-div">
+                            
                             <h3 class="input-desc">
-                                Id 
+                                Select Product
                             </h3>
-                            <input class="input-space" id="id-input" type="number">
+                            <select class="input-space" id="id-input">
+                                <option>Select</option>
+                                <option>Vixian Type +</option>
+                                <option>Vixian SF</option>
+                                <option>Vixian Mini</option>
+                                <option>Kawasako TKL</option>
+                                <option>Kawasako Type Nano</option>
+                            </select>
                         </div>
                         <div class="input-div">
                             <h3 class="input-desc">
