--- a/index.html
+++ b/index.html
@@ -44,20 +44,26 @@
         <div id="news">
             <p class="news-title">NEWS</p>
             <div class="image-slider">
-                <div class="image">
-                    <img class="rightimage" src="assets/3.jpg">
+                <div class="image-slide">
+                    <img class="rightimage imgsld" src="assets/3.jpg">
                 </div>
-                <div class="image">
-                    <img class="centerimage" src="assets/2.jpg">
+                <div class="image-slide">
+                    <img class="centerimage imgsld" src="assets/2.jpg">
                 </div>
-                <div class="image">
-                    <img class="leftimage" src="assets/1.jpg" alt="">
+                <div class="image-slide">
+                    <img class="leftimage imgsld" src="assets/1.jpg" alt="">
                 </div>
+            </div>
+            <div class="slider-points">
+                <span class="point" onclick="setSlide(1)"></span>
+                <span class="point" onclick="setSlide(2)"></span>
+                <span class="point" onclick="setSlide(3)"></span>
             </div>
         </div>
     </div>
     <div>
 
+        <script src="index.js"></script>
     </div>
     <div>
 
