--- a/products.html
+++ b/products.html
@@ -15,15 +15,39 @@
         <img src="LOGO.png" alt="" srcset="">
         <nav>
             <ul>
-                <a href="./index.html#top">
-                    <li>about</li>
-                </a>
-                <a href="./index.html#news">
-                    <li>news</li>
-                </a>
-                <a href="./products.html">
-                    <li>products</li>
-                </a>
+                <div class="dropdown">
+                    <div class="dbutton">
+                        <li>home</li>
+                    </div>
+                    <div class="dcontent">
+                        <a href="./index.html#top">
+                            <hr>
+                            <li>about</li>
+                        </a>
+                        <a href="./index.html#news">
+                            <hr>
+                            <li>news</li>
+                        </a>
+                    </div>
+                </div>
+                <div class="dropdown">                        
+                    <div class="dbutton">
+                        <li>products</li>
+                    </div>
+                    <div class="dcontent">
+                        <a href="./products.html#vixian">
+                            <hr>
+                            <li>vixian</li>
+                            
+                        </a>
+                        <a href="./products.html#kawasako">
+                            <hr>
+                            <li>kawasako</li>
+                        </a>
+                    </div>
+                </div>
+
+
                 <a href="./gallery.html">
                     <li>gallery</li>
                 </a>
@@ -36,25 +60,24 @@
     <div class="content">
       <div id="vixian">
         <h1>Vixian</h1>
-
         <div class="product-container">
             <div class="product">
                 <img src="./assets/2.jpg" alt="">
                 <h3>Type +</h3>
-                <h3><b>Rp.90,000,000</b></h3>
-                <p>Vixian ini sangatlah mantap karena type+</p>    
+                <h3><b>IDR 90,000,000</b></h3>
+                <p>This vixian is very excellent because it is +</p>    
             </div>
             <div class="product">
                 <img src="./assets/4.jpg" alt="">
                 <h3>SF</h3>
-                <h3><b>Rp.120,000,000</b></h3>
-                <p>SF adalah singkatan dari Super Fast. Tipe vixian ini sangat dianjurkan bagi kalian yang memiliki kecepatan sebagai prioritas</p>    
+                <h3><b>IDR 120,000,000</b></h3>
+                <p>SF stands for Super Fast. This type is for you who aims for a super fast riding experience.</p>    
             </div>
             <div class="product">
                 <img src="./assets/5.jpg" alt="">
                 <h3>Mini</h3>
-                <h3><b>Rp.50,000,000</b></h3>
-                <p>Vixian sangat cocok untuk anda yang ingin tetap melaju ditengah keramainan jalanan di jakarta</p>    
+                <h3><b>IDR 50,000,000</b></h3>
+                <p>Vixian mini aims for you who still wants to go fast despite the traffic.</p>
             </div>
         </div>
 
@@ -65,15 +88,15 @@
             <div class="product">
                 <img src="./assets/1.jpg" alt="">
                 <h3>TKL</h3>
-                <h3><b>Rp.120,000,000</b></h3>
-                <p>TKL adalah singkatan dari Tembuk KiLat. Tipe ini cocok untuk anda yang menginginkan kecepatan yang tembus kilat.</p>
+                <h3><b>IDR 120,000,000</b></h3>
+                <p>TKL stand for Time Kruskal Legend. This type is good for those who wants a kruskal pathfinding feature to find path to go anywhere.</p>
     
             </div>
             <div class="product">
                 <img src="./assets/3.jpg" alt="">
                 <h3>Type Nano</h3>
-                <h3><b>Rp.80,000,000</b></h3>
-                <p>Vixian Unik yang memiliki kecepatan nano.</p>    
+                <h3><b>IDR 80,000,000</b></h3>
+                <p>This motorcycle have a nanospeed.</p>    
             </div>
         </div>
 
