--- a/gallery.html
+++ b/gallery.html
@@ -14,15 +14,39 @@
         <img src="LOGO.png" alt="" srcset="">
         <nav>
             <ul>
-                <a href="./index.html#top">
-                    <li>about</li>
-                </a>
-                <a href="./index.html#news">
-                    <li>news</li>
-                </a>
-                <a href="./products.html">
-                    <li>products</li>
-                </a>
+                <div class="dropdown">
+                    <div class="dbutton">
+                        <li>home</li>
+                    </div>
+                    <div class="dcontent">
+                        <a href="./index.html#top">
+                            <hr>
+                            <li>about</li>
+                        </a>
+                        <a href="./index.html#news">
+                            <hr>
+                            <li>news</li>
+                        </a>
+                    </div>
+                </div>
+                <div class="dropdown">                        
+                    <div class="dbutton">
+                        <li>products</li>
+                    </div>
+                    <div class="dcontent">
+                        <a href="./products.html#vixian">
+                            <hr>
+                            <li>vixian</li>
+                            
+                        </a>
+                        <a href="./products.html#kawasako">
+                            <hr>
+                            <li>kawasako</li>
+                        </a>
+                    </div>
+                </div>
+
+
                 <a href="./gallery.html">
                     <li>gallery</li>
                 </a>
