--- a/index.html
+++ b/index.html
@@ -8,22 +8,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="top">
-
-    </div>
     <header>
         <img src="LOGO.png" alt="" srcset="">
         <nav>
             <ul>
-                <a href="./index.html#top">
-                    <li>about</li>
-                </a>
-                <a href="./index.html#news">
-                    <li>news</li>
-                </a>
-                <a href="./products.html">
-                    <li>products</li>
-                </a>
+                <div class="dropdown">
+                    <div class="dbutton">
+                        <li>home</li>
+                    </div>
+                    <div class="dcontent">
+                        <a href="./index.html#top">
+                            <hr>
+                            <li>about</li>
+                        </a>
+                        <a href="./index.html#news">
+                            <hr>
+                            <li>news</li>
+                        </a>
+                    </div>
+                </div>
+                <div class="dropdown">                        
+                    <div class="dbutton">
+                        <li>products</li>
+                    </div>
+                    <div class="dcontent">
+                        <a href="./products.html#vixian">
+                            <hr>
+                            <li>vixian</li>
+                            
+                        </a>
+                        <a href="./products.html#kawasako">
+                            <hr>
+                            <li>kawasako</li>
+                        </a>
+                    </div>
+                </div>
+
+
                 <a href="./gallery.html">
                     <li>gallery</li>
                 </a>
@@ -42,7 +63,7 @@
         </div>
 
         <div id="news">
-            <p class="news-title">NEWS</p>
+            <p class="news-title">NEWS</p> 
             <div class="image-slider">
                 <div class="image-slide">
                     <img class="rightimage imgsld" src="assets/3.jpg">
@@ -55,15 +76,17 @@
                 </div>
             </div>
             <div class="slider-points">
+                <span class="point" onclick="setSlide(0)"></span>
                 <span class="point" onclick="setSlide(1)"></span>
                 <span class="point" onclick="setSlide(2)"></span>
-                <span class="point" onclick="setSlide(3)"></span>
             </div>
         </div>
     </div>
     <div>
+    <script src="jquery.js"></script>
+    <script src="index.js"></script>
+    
 
-        <script src="index.js"></script>
     </div>
     <div>
 
